syntax = "proto3";

package userAuthPb;

// protoc -I ./ ./UserAuth.proto --go_out=plugins=grpc:./

service UserAuth {
    rpc CheckAuthToken (Token) returns (Id);
}


message Token {
    string value = 1;
}

message Id {
    int64 value = 1;
}


